--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Discord bot for claiming Tibia hunting spots",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node run-bot.js",
+    "dev": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.0.0"
+    "discord.js": "^14.0.0",
+    "express": "^4.18.0"
   }
 }
